css fixes and locking scroll on mobile menu toggle

--- a/src/components/headers/header-mobile/HeaderMobile.style.scss
+++ b/src/components/headers/header-mobile/HeaderMobile.style.scss
@@ -9,7 +9,7 @@
 
   position: fixed;
   top: 0;
-  z-index: 9999;
+  z-index: 10000;
   .header-mobile-main-row {
     width: 100vw;
     height: 70px;
