--- a/src/components/item/Item.style.scss
+++ b/src/components/item/Item.style.scss
@@ -3,18 +3,19 @@
   flex: 0 0 calc(50% - 1em);
   box-sizing: border-box;
   margin: 1rem 0.5em;
-  border: 3px solid transparent;
+  border: 2px solid transparent;
   border-radius: 5px;
+
   &:hover {
-    border: 3px solid rgba(79, 84, 133, 0.3);
+    border: 2px solid rgba(79, 84, 133, 0.2);
   }
   &:active {
-    border: 3px solid rgba(79, 84, 133, 0.3);
+    border: 3px solid rgba(79, 84, 133, 0.2);
   }
 
   .item-image {
     width: 100%;
-    height: 85%;
+    height: 75%;
   }
   .item-description-container {
     text-transform: uppercase;
@@ -22,7 +23,7 @@
     display: flex;
     padding: 5px;
     flex-direction: column;
-    height: 15%;
+    min-height: 15%;
     justify-content: space-around;
 
     .item-title {
