--- a/src/components/logos/logo-login/LogoLogin.style.scss
+++ b/src/components/logos/logo-login/LogoLogin.style.scss
@@ -2,7 +2,7 @@
   .logo-login-container {
     width: 100vw;
     height: 75px;
-    background-color: rgba(143, 143, 143, 0.5);
+    background: linear-gradient(60deg, #2d264e, rgba(162, 163, 173, 0.65));
     display: flex;
     justify-content: center;
     align-items: center;
