--- a/src/components/page-title-header/PageTitleHeader.style.scss
+++ b/src/components/page-title-header/PageTitleHeader.style.scss
@@ -1,13 +1,13 @@
 .page-title-header {
   background: linear-gradient(60deg, #2d264e, #26294e);
-  min-width: 65%;
-  max-width: 75%;
   height: 70px;
   margin: 40px auto;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-basis: 100%;
 
   .page-title-icon {
     width: 30px;
@@ -45,9 +45,9 @@
 }
 @media (max-width: 1024px) {
   .page-title-header {
-    height: 60px;
+    min-height: 60px;
     max-width: unset;
-    width: 95%;
+    flex-basis: 95%;
     margin: 20px auto;
     .page-title-text {
       font-size: 20px;
